Don't link to built CSS in dev mode
In dev mode, CSS will be appended to the DOM in a `style` element
automatically thanks to `style-loader`, so there's no need to have a
`link` tag in the layout HTML file.

--- a/client/views/index.pug
+++ b/client/views/index.pug
@@ -3,10 +3,11 @@ html
   head
     title
       | The title
-    link(
-      rel="stylesheet"
-      href=`/${staticDirectoryName}/${cssBundleFileName}`
-    )
+    if process.env.NODE_ENV === "production"
+      link(
+        rel="stylesheet"
+        href=`/${staticDirectoryName}/${cssBundleFileName}`
+      )
   body
     #root
     script(src=`/${staticDirectoryName}/${jsBundleFileName}`)
