Generate lattice programmatically
This still isn't perfect -- we need to group together related cells and
color them differently -- but it's a lot closer now.

--- a/app/components/Cell/index.css
+++ b/app/components/Cell/index.css
@@ -2,10 +2,8 @@
   background-repeat: no-repeat;
   background-size: cover;
   font-family: Roboto;
-  height: 120px;
-  position: relative;
+  position: absolute;
   text-align: center;
-  width: 104px;
   line-height: 1;
   display: flex;
   align-items: center;
