--- a/app/components/Cell/index.css
+++ b/app/components/Cell/index.css
@@ -1,6 +1,7 @@
 .root {
   background-repeat: no-repeat;
   background-size: cover;
+  background-color: transparent;
   font-family: Roboto;
   position: absolute;
   text-align: center;
@@ -8,6 +9,27 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border: none;
+  padding: 0;
+  transition: filter linear 150ms;
+}
+
+.root:hover {
+  cursor: pointer;
+  /*box-shadow: 0px 2px 2px rgba(0,0,0,0.2);*/
+  filter: drop-shadow(0px 3px 2px rgba(0,0,0,0.4));
+}
+
+.root:active {
+  background: red;
+}
+
+.root:focus {
+  outline: none;
+}
+
+.root:focus:not(:active) {
+  background: black;
 }
 
 .name,
