--- a/app/components/Cell/index.css
+++ b/app/components/Cell/index.css
@@ -16,20 +16,15 @@
 
 .root:hover {
   cursor: pointer;
-  /*box-shadow: 0px 2px 2px rgba(0,0,0,0.2);*/
   filter: drop-shadow(0px 3px 2px rgba(0,0,0,0.4));
 }
 
-.root:active {
-  background: red;
+.root:focus:active {
+  filter: drop-shadow(0px 3px 2px rgba(0,0,0,0.6));
 }
 
 .root:focus {
   outline: none;
-}
-
-.root:focus:not(:active) {
-  background: black;
 }
 
 .name,
