Improve usability of lattice with mouse
* Make it so that you can hold your mouse over the lattice and slide
  across cells in order to play the notes in the lattice
* Ensure that the cell that you've hovered over is layered on top of
  all other cells so that the box shadow for that cell is not clipped by
  any other cells around it

--- a/app/components/Cell/index.css
+++ b/app/components/Cell/index.css
@@ -11,7 +11,12 @@
   justify-content: center;
   border: none;
   padding: 0;
-  transition: filter linear 150ms;
+  transition: filter linear 150ms, transform linear 150ms;
+}
+
+.root:hover,
+.root:focus:active {
+  transform: scale(1.1, 1.1);
 }
 
 .root:hover {
