Add ability to play the lattice with the keyboard!
This is a pretty cool commit. We make it so that there are two modes to
the lattice: mouse mode and keyboard mode. In mouse mode, you can play
notes by clicking on them. But obviously, you can't play more than one
note at a time. Hence, if you press K, you can drop into keyboard mode.
By pressing the keys on your keyboard, you can then play multiple notes.
Since there are only 26 letters on your keyboard, only 26 cells are
enabled and the rest are grayed out. (You can still click on these cells
too, if you want.) To get back into mouse mode, you press Shift-K.

Note that there's a limitation. For some reason, you can really only
play 2 notes at a time. Sometimes you can play more than one if the keys
are far apart. But if they're close together, then it won't work. I
haven't been able to figure out why this is just yet. (I'm pretty sure
Jeff Atwood has written about this and it's a limitation of keyboards,
but who knows.)

In a future commit, you'll have the ability to shift it up or down a
cell at a time to play other cells.

--- a/app/components/Cell/index.css
+++ b/app/components/Cell/index.css
@@ -11,25 +11,25 @@
   justify-content: center;
   border: none;
   padding: 0;
-  transition: filter linear 150ms, transform linear 150ms;
+  transition: filter linear 150ms, transform linear 150ms, opacity linear 150ms;
 }
 
-.root:hover,
-.root:focus:active {
-  transform: scale(1.1, 1.1);
-}
-
-.root:hover {
+.root.enabled:hover {
   cursor: pointer;
   filter: drop-shadow(0px 3px 2px rgba(0,0,0,0.4));
 }
 
-.root:focus:active {
+.root.enabled.active {
+  transform: scale(1.1, 1.1);
   filter: drop-shadow(0px 3px 2px rgba(0,0,0,0.6));
 }
 
-.root:focus {
+.root.enabled:focus {
   outline: none;
+}
+
+.root.disabled {
+  opacity: 0.15;
 }
 
 .name,
