--- a/app/components/Cell/index.css
+++ b/app/components/Cell/index.css
@@ -2,7 +2,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-color: transparent;
-  font-family: Roboto;
+  font-family: "Roboto";
   position: absolute;
   text-align: center;
   line-height: 1;
