--- a/app/components/Header/index.css
+++ b/app/components/Header/index.css
@@ -1,12 +1,17 @@
 .root {
-  left: 0;
+  left: 30px;
   line-height: 1.5;
   opacity: 0.3;
-  padding: 40px 40px 0 40px;
   position: absolute;
-  top: 0;
+  top: 30px;
   transition: opacity linear 300ms;
   z-index: 10;
+}
+
+@media (min-width: 1500px) {
+  .root {
+    left: 0;
+  }
 }
 
 .root:hover {
