--- a/app/components/InfoModal/index.css
+++ b/app/components/InfoModal/index.css
@@ -3,21 +3,21 @@
 }
 
 .color-1 {
-  color: #F07272;
+  color: #f36262;
 }
 
 .color-2 {
-  color: #CBBD0F;
+  color: #cbbd0f;
 }
 
 .color-3 {
-  color: #6AD712;
+  color: #73c72f;
 }
 
 .color-4 {
-  color: #00CCEC;
+  color: #3ccae0;
 }
 
 .color-5 {
-  color: #8169F2;
+  color: #9282de;
 }
