--- a/app/stylesheets/index.css
+++ b/app/stylesheets/index.css
@@ -26,6 +26,14 @@
   line-height: 1.6;
 }
 
+:global h1,
+:global h2,
+:global h3,
+:global h4,
+:global h5 {
+  line-height: 1.4;
+}
+
 :global p {
   margin-top: 0;
   margin-bottom: 1em;
